Fixed team page content wrapper alignment on phones

--- a/css/team_media.css
+++ b/css/team_media.css
@@ -1,4 +1,8 @@
 @media (max-width: 575px) {
+  .content-wrapper-team {
+    display: block;
+  }
+
   .profiles {
     margin: -1em auto 2em auto;
     gap: 2em;
